# fridi

./: .codecov.yml  .gitignore  .manki.yml  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  LICENSE  README.md  clippy.toml  config.example.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  claude-review.yml  manki.yml  pre-commit.yml  test.yml
agents/: coordinator.yaml  developer.yaml  planner.yaml  qa.yaml
crates/agent/: Cargo.toml
crates/agent/src/: claude.rs  definition.rs  lib.rs  pty.rs  traits.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  run.rs  spawner.rs
crates/core/: Cargo.toml
crates/core/src/: backlog.rs  dag.rs  engine.rs  github.rs  lib.rs  orchestrator.rs  project_overview.rs  schema.rs  session.rs  window_state.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: broker.rs  config.rs  lib.rs  main.rs  protocol.rs  server.rs  tools.rs  transport.rs  types.rs
crates/notify/: Cargo.toml
crates/notify/src/: config.rs  console.rs  lib.rs  rate_limited.rs  rate_limiter.rs  slack.rs  telegram.rs  traits.rs
crates/trigger/: Cargo.toml
crates/trigger/src/: cron.rs  lib.rs  manager.rs  manual.rs  traits.rs
crates/ui/: Cargo.toml
crates/ui/assets/: xterm-addon-fit.min.js  xterm.js
crates/ui/src/: app.rs  engine_bridge.rs  main.rs  state.rs  styles.rs  workflow_runner.rs
crates/ui/src/components/: backlog_tab.rs  command_palette.rs  confirm_dialog.rs  home_dashboard.rs  mod.rs  quick_capture.rs  session_creator.rs  sidebar.rs  split_pane.rs  step_card.rs  tab_bar.rs  terminal_view.rs  toast.rs  welcome_screen.rs  workflow_picker.rs  workflow_view.rs
workflows/: README.md  hivemind.yaml  pr-babysitter.yaml
