[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/agent",
    "crates/notify",
    "crates/trigger",
    "crates/ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
conductor-core = { path = "crates/core" }
conductor-agent = { path = "crates/agent" }
conductor-notify = { path = "crates/notify" }
conductor-trigger = { path = "crates/trigger" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# DAG
petgraph = "0.7"

# HTTP client (for notifications)
reqwest = { version = "0.12", features = ["json"] }

# Dioxus
dioxus = { version = "0.7" }
