[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/agent",
    "crates/mcp",
    "crates/notify",
    "crates/trigger",
    "crates/ui",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
fridi-core = { path = "crates/core" }
fridi-agent = { path = "crates/agent" }
fridi-mcp = { path = "crates/mcp" }
fridi-notify = { path = "crates/notify" }
fridi-trigger = { path = "crates/trigger" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# DAG
petgraph = "0.7"

# HTTP client (for notifications)
reqwest = { version = "0.12", features = ["json"] }

# PTY
portable-pty = "0.9"

# Async utilities
async-trait = "0.1"

# Bytes
bytes = "1"

# Config
toml = "0.8"

# Scheduling
tokio-cron-scheduler = "0.13"
# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# UUID
uuid = { version = "1", features = ["v4"] }

# Testing
tempfile = "3"
wiremock = "0.6"
temp-env = "0.3"

# Dioxus
dioxus = { version = "0.7" }
