[package]
name = "fridi-agent"
version.workspace = true
edition.workspace = true

[dependencies]
fridi-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
portable-pty = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
