[package]
name = "fridi-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fridi"
path = "src/main.rs"

[dependencies]
fridi-core = { workspace = true }
fridi-agent = { workspace = true }
fridi-mcp = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
