[package]
name = "fridi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fridi"
path = "src/main.rs"

[dependencies]
fridi-core = { workspace = true }
fridi-agent = { workspace = true }
fridi-mcp = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
