[package]
name = "fridi-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fridi-mcp-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
