[package]
name = "fridi-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fridi-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
