[package]
name = "conductor-trigger"
version.workspace = true
edition.workspace = true

[dependencies]
conductor-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
tokio-cron-scheduler = { workspace = true }
