[package]
name = "fridi-ui"
version.workspace = true
edition.workspace = true

[dependencies]
fridi-core = { workspace = true }
fridi-agent = { workspace = true }
fridi-cli = { workspace = true }
fridi-mcp = { workspace = true }
fridi-notify = { workspace = true }
fridi-trigger = { workspace = true }
anyhow = { workspace = true }
dioxus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
